// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterButton renders with base props 1`] = `
<button
  className="lab-narrow-sidebar__item"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-narrow-sidebar__item-label"
  >
    Test button
  </span>
</button>
`;

exports[`FooterButton renders with icon 1`] = `
<button
  className="lab-narrow-sidebar__item"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--star lab-narrow-sidebar__item-icon"
  >
    <svg
      aria-hidden={true}
      className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
      fill="currentColor"
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 2a8 8 0 1 1 0 16 8 8 0 0 1 0-16Zm0 1a7 7 0 1 0 0 14 7 7 0 0 0 0-14Zm0 9.5a.75.75 0 1 1 0 1.5.75.75 0 0 1 0-1.5ZM10 6a.5.5 0 0 1 .5.41V11a.5.5 0 0 1-1 .09V6.5c0-.28.22-.5.5-.5Z"
        fill="currentColor"
      />
    </svg>
  </span>
  <span
    className="lab-narrow-sidebar__item-label"
  >
    Test button
  </span>
</button>
`;
